--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.less";
+@import "./variables.less";
 
 .header {
   padding: 24px;
@@ -11,17 +12,29 @@
 .content {
   padding: 24px;
   min-height: 100vh;
-  background-color: #ecf4ff;
+  background-color: @dark-color;
   display: flex;
   justify-content: center;
+
+  .container {
+    position: relative;
+    border: 4px solid @primary-color;
+    border-radius: 10px;
+    padding: 75px;
+    margin: 75px;
+    .logo {
+      position: absolute;
+      top: -164px;
+    }
+  }
 }
 
 .backTop {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #6160ff;
-  color: #ecf4ff;
+  background-color: @soft-blue;
+  color: @aqua;
   height: 40px;
   width: 40px;
   border-radius: 50px;
