--- a/src/styles/phaseInfo.less
+++ b/src/styles/phaseInfo.less
@@ -1,23 +1,7 @@
 @import "./variables.less";
+@import "./mixins.less";
 
-// Less mixins
-.position() {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 24px;
-}
-
-.elevation() {
-  background-color: transparent;
-  border-radius: 6px;
-  border: transparent;
-  -webkit-box-shadow: 1px 1px 26px 6px rgba(0, 0, 0, 0.24);
-  box-shadow: 1px 1px 26px 6px rgba(0, 0, 0, 0.24);
-}
-
-//Page Styling
 .phase-card {
-  width: 650px;
   .title-wrapper {
     .title {
       color: @aqua;
@@ -50,4 +34,5 @@
     .position();
   }
   .elevation();
+  .generalCard();
 }
