styles adjustments, validations and added bignumbers

--- a/src/styles/phaseInfo.less
+++ b/src/styles/phaseInfo.less
@@ -22,15 +22,19 @@
   }
 
   .deposit-wrapper {
+    .token-type {
+      margin-bottom: 20px;
+      text-align: center;
+    }
     .ant-input-borderless {
       width: 50%;
       margin-right: 20px;
       color: @aqua;
       border-bottom: 1px solid @aqua;
     }
-    .position();
   }
   .native-wrapper {
+    margin-top: 30px;
     .position();
   }
   .elevation();
