--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -43,3 +43,15 @@
     width: 24px;
   }
 }
+
+//General styling
+
+.ant-select-dropdown {
+  background: @dark-color;
+  > div {
+    background: @dark-color;
+  }
+}
+.ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+  background-color: @primary-color;
+}
