--- a/src/styles/referral.less
+++ b/src/styles/referral.less
@@ -1,16 +1,18 @@
 @import "./variables.less";
 @import "./mixins.less";
 
-.referral-card {
-  .referral-wrapper {
-    .ant-input-borderless {
-      width: 50%;
-      margin-right: 20px;
-      color: @aqua;
-      border-bottom: 1px solid @aqua;
-    }
-    .position();
+.referral-wrapper {
+  margin: 30px 0;
+  .ant-input-borderless {
+    width: 100%;
+    margin-right: 30px;
+    color: @aqua;
+    border-bottom: 1px solid @aqua !important;
   }
-  .elevation();
-  .generalCard();
+  .ant-input-suffix {
+    position: absolute;
+    right: 14px;
+    top: 10px;
+  }
+  .position();
 }
