--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -1,14 +1,6 @@
 @import "~antd/dist/antd.less";
 @import "./variables.less";
 
-.header {
-  padding: 24px;
-  height: 160px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .content {
   padding: 24px;
   min-height: 100vh;
@@ -25,6 +17,26 @@
     .logo {
       position: absolute;
       top: -164px;
+    }
+
+    .action-buttons {
+      position: absolute;
+      top: -32px;
+      right: 0;
+      padding-right: 0;
+      width: 140px;
+    }
+    .disc {
+      width: 115px;
+    }
+    .user {
+      position: absolute;
+      top: -28px;
+      left: 0;
+      max-width: 150px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
