first try with gameOnStable contract

--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -67,3 +67,11 @@
 .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
   background-color: @primary-color;
 }
+
+//Test classname only
+.testBtns {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
