remove unnecessary fields

--- a/src/styles/phaseInfo.less
+++ b/src/styles/phaseInfo.less
@@ -21,6 +21,21 @@
     .position();
   }
 
+  .referral-wrapper {
+    .ant-input-borderless {
+      width: 100%;
+      margin-right: 30px;
+      color: @aqua;
+      border-bottom: 1px solid @aqua !important;
+    }
+    .ant-input-suffix {
+      position: absolute;
+      right: 14px;
+      top: 10px;
+    }
+    .position();
+  }
+
   .deposit-wrapper {
     .token-type {
       margin-bottom: 20px;
