added wallet connection from boilerplate and started light/dark theme switcher

--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -39,6 +39,11 @@
       text-overflow: ellipsis;
     }
   }
+  .connect-wallet {
+    position: absolute;
+    right: 0;
+    top: -40px;
+  }
 }
 
 .backTop {
@@ -66,4 +71,12 @@
 }
 .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
   background-color: @primary-color;
+}
+.ant-modal-content {
+  background-color: @dark-color !important;
+}
+
+.ant-card-bordered {
+  background-color: @dark-color !important;
+  border: 0 !important;
 }
