added dark and light mode

--- a/src/styles/presale.less
+++ b/src/styles/presale.less
@@ -44,6 +44,11 @@
     right: 0;
     top: -40px;
   }
+  .dark-light {
+    position: absolute;
+    left: 0;
+    top: -40px;
+  }
 }
 
 .backTop {
