increase code beauty

--- a/src/styles/phaseInfo-light.less
+++ b/src/styles/phaseInfo-light.less
@@ -1,23 +1,23 @@
-@import "./variables-light.less";
+@import "./variables.less";
 @import "./mixins.less";
 
 .phase-card-light {
   .title-wrapper {
     .title {
-      color: @aqua;
+      color: @dark-color;
     }
   }
 
   .referral-wrapper-light {
     .ant-input-borderless {
-      border-bottom: 1px solid @aqua !important;
+      border-bottom: 1px solid @dark-color !important;
     }
   }
 
   .deposit-wrapper-light {
     .ant-input-borderless {
-      color: @aqua;
-      border-bottom: 1px solid @aqua;
+      color: @dark-color;
+      border-bottom: 1px solid @dark-color;
     }
   }
 }
