--- a/src/styles/presale-light.less
+++ b/src/styles/presale-light.less
@@ -1,8 +1,8 @@
 @import "~antd/dist/antd.less";
-@import "./variables-light.less";
+@import "./variables.less";
 
 .content-light {
-  background-color: @dark-color !important ;
+  background-color: @aqua !important ;
 
   .container {
     border: 4px solid @primary-color;
@@ -17,9 +17,9 @@
 //General styling
 
 .ant-select-dropdown {
-  background: @dark-color;
+  background: @aqua;
   > div {
-    background: @dark-color;
+    background: @aqua;
   }
 }
 .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
