--- a/src/styles/phaseInfo.less
+++ b/src/styles/phaseInfo.less
@@ -10,6 +10,9 @@
   }
 
   .referral-wrapper {
+    .ant-input-affix-wrapper-borderless {
+      max-width: 350px;
+    }
     .ant-input-borderless {
       width: 100%;
       margin-right: 30px;
@@ -37,7 +40,6 @@
     }
   }
   .native-wrapper {
-    margin-top: 30px;
     .position();
   }
   .elevation();
