--- a/src/styles/presale-light.less
+++ b/src/styles/presale-light.less
@@ -25,3 +25,12 @@
 .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
   background-color: @primary-color;
 }
+
+.ant-modal-content {
+  background-color: @aqua !important;
+}
+
+.ant-card-bordered {
+  background-color: @aqua !important;
+  border: 0 !important;
+}
